Added Texture to the Starlight namespace, added extra arguments for Texture.Use()

--- a/Starlight/Starlight.csproj
+++ b/Starlight/Starlight.csproj
@@ -20,7 +20,7 @@
   </Target>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="rd $(ProjectDir)$(OutDir)resources -S -Q" />
+    <Exec Command="rmdir $(ProjectDir)$(OutDir)resources /S /Q" />
   </Target>
 
 </Project>
